--- a/app/Resources/views/quittance/show.html.twig
+++ b/app/Resources/views/quittance/show.html.twig
@@ -15,7 +15,7 @@
 {% block pagetitle -%}VOIR UNE QUITTANCE{% endblock %}
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('visite_quittance') }}">LISTER</a></label>
-    <label class="btn btn-outline-secondary"><a  href="#" target="_blank" onclick="printDiv('quittance')">IMPRIMER</a></label>
+    <label class="btn btn-outline-secondary"><a  href="#" onclick="printDiv('quittance')">IMPRIMER</a></label>
     <label class="btn btn-outline-secondary">
         {% if quittance.paye %}<a href="#" title="Rembourser" onclick="rembourser()">REMBOURSER</a>
         {% else %}<a onclick="return confirm('Veuiller confirmer l\'encaissement de la quittance N° {{quittance.numero}}');" href="{{ path('caisse_quittance_encaisser', { 'id': quittance.id }) }}">ENCAISSER</a>
@@ -81,11 +81,10 @@
 
   newWin.document.open();
 
-  newWin.document.write('<html><body onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
+  newWin.document.write('<html><body style="width:1050px;size:landscape;" onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
 
   newWin.document.close();
-
-  setTimeout(function(){newWin.close();},10);
+  newWin.close();
 
 }
         function rembourser(){
