--- a/app/Resources/views/quittance/show.html.twig
+++ b/app/Resources/views/quittance/show.html.twig
@@ -81,7 +81,7 @@
 
   newWin.document.open();
 
-  newWin.document.write('<html><body style="width:1050px;size:landscape;" onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
+  newWin.document.write('<html><body style="width:1050px;" onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
 
   newWin.document.close();
   newWin.close();
