--- a/app/Resources/views/visite/show.delivrance.html.twig
+++ b/app/Resources/views/visite/show.delivrance.html.twig
@@ -17,7 +17,7 @@
 {% block actions %}
     {% if is_granted('ROLE_DELIVRANCE') %}
         <label class="btn btn-outline-secondary"><a href="{{ path('visite_delivrance') }}">LISTE DELIVRANCE</a></label>
-        <label class="btn btn-outline-secondary"><a  href="#" onclick="printDiv('rapport')">IMPRIMER</a></label>
+        <label class="btn btn-outline-secondary"><a onclick="printRapport('rapport')"  href="#">IMPRIMER</a></label>
         {% if visite.statut == 2 or visite.statut == 4 %}
             <label class="btn btn-outline-secondary"><a onclick="printDiv('certificat')" href="#">CERTIFICAT</a></label>
         {% endif %}
@@ -87,29 +87,30 @@
 </div>
             
                 </div>
+{% if visite.statut == 2 or visite.statut == 4 %}
 <div id="certificat" style="size: A4; margin: 0;background-image:url('{{ asset('images/certificat.jpg') }}');background-size:210mm 297mm;width:210mm;font-size:11px;overflow:hidden">
     
     <div style="width:11.5cm; height: 7cm;overflow: hidden;">
-        <div style="margin-top:3mm;margin-left: 8.5cm">{{ visite.numeroCertificat }}</div>
-        <div style="margin-top:1.7cm;margin-left:1.3cm"><div style="display: inline-block;width: 7.5cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('Y-m-d') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('Y-m-d') }}</span></div>
-        <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm">{{ visite.vehicule.typeChassis }}</div>
+        <div style="margin-top:2mm;margin-left: 8.6cm">{{ visite.numeroCertificat }}</div>
+        <div style="margin-top:1.7cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
+        <div style="margin-top:8mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
-        <div style="margin-top:3mm;margin-left: 8.5cm">{{ visite.numeroCertificat }}</div>
-        <div style="margin-top:1.7cm;margin-left:1.3cm"><div style="display: inline-block;width: 7.5cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('Y-m-d') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('Y-m-d') }}</span></div>
-        <div style="margin-top:6mm;margin-left:2.5cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</span></div>
-        <div style="margin-top:0mm;margin-left:1.8cm">{{ visite.vehicule.typeChassis }}</div>
+        <div style="margin-top:2mm;margin-left: 8.6cm">{{ visite.numeroCertificat }}</div>
+        <div style="margin-top:1.7cm;margin-left:1.4cm"><div style="display: inline-block;width: 7.6cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('d-m-y') }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.9cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('d-m-y') }}</span></div>
+        <div style="margin-top:8mm;margin-left:2.5cm"><div style="display: inline-block;width: 7.1cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('d-m-y') }}</span></div>
+        <div style="margin-top:0mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.8cm">{{ visite.vehicule.typeChassis }}</div><span>{{ visite.vehicule.modele.marque.libelle }} {{ visite.vehicule.modele.libelle }}</span></div>
     </div>
     <div style="width:11.5cm; height: 7cm;overflow: hidden;">
-        <div style="margin-top:1.3cm;margin-left:5.5cm">{{ visite.numeroCertificat }}</div>
-        <div style="margin-top:1.5cm;text-align: center">{{ visite.vehicule.immatriculation}}</div>
-        <div style="margin-top:0.5cm;text-align: center">{{ visite.dateValidite|date('Y-m-d') }}</div>
+        <div style="margin-top:1.2cm;margin-left:5.6cm">{{ visite.numeroCertificat }}</div>
+        <div style="margin-top:1.5cm;text-align: center;font-weight: bold;font-size: 12px">{{ visite.vehicule.immatriculation}}</div>
+        <div style="margin-top:0cm;text-align: center;font-weight: bold;font-size:30px">{{ visite.dateValidite|date('d-m-y') }}</div>
     </div>
 </div>
-    
+{% endif %}   
 {% endblock %}
 
 {% block javascripts -%}
@@ -123,12 +124,30 @@
 
   newWin.document.open();
 
-  newWin.document.write('<html><body style="size: A4; margin: 0;width:210mm;font-size:11px;overflow:hidden" onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
+  newWin.document.write('<html><body style="size: A4; margin: 0;width:210mm;font-size:11px;overflow:hidden;margin-left:4.5cm;margin-top:-0.2cm" onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
 
   newWin.document.close();
   newWin.close();
   
 
 }
+
+        function printRapport(DivIdToPrint) 
+{
+
+  var divToPrint=document.getElementById(DivIdToPrint);
+
+  var newWin=window.open('','Print-Window');
+
+  newWin.document.open();
+
+  newWin.document.write('<html><body onload="window.print()">'+divToPrint.innerHTML+'</body></html>');
+
+  newWin.document.close();
+ 
+
+}
 </script>
+
+
 {% endblock %}
