--- a/app/Resources/views/vehiculeimport/new.html.twig
+++ b/app/Resources/views/vehiculeimport/new.html.twig
@@ -1,16 +1,23 @@
-{% extends 'base.html.twig' %}
-
+{% extends '::base.html.twig' %}
+{% block menu -%}
+{% include '::vehicule/menu.html.twig' %}
+{% endblock %}
+{% block menu_enregistrement_actif %}active{% endblock %}
+{% block ariane -%}
+    <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('vehicule_index') }}">Véhicules</a></li>
+          <li class="breadcrumb-item">Importer</li>
+        </ol>
+{% endblock %}
+{% block pagetitle -%}IMPORTE UNE LISTE DE VEHICULE{% endblock %}
+{% block actions %} 
+    <label class="btn btn-outline-secondary"><a href="{{ path('vehicule_index') }}">RETOUR A LA LISTE</a></label>
+{% endblock %}
 {% block body %}
-    <h1>Vehiculeimport creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Importer" />
     {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('vehiculeimport_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
