--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,14 +39,14 @@
       <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="{{ path('homepage') }}">
+      <a class="navbar-brand d-md-down-none" href="{{ path('homepage') }}">
         <img class="navbar-brand-full" src="{{ asset('images/mts.jpg') }}" width="89" height="25" alt="AUTOSCAN">
         <img class="navbar-brand-minimized" src="{{ asset('images/sygnet.svg') }}" width="30" height="30" alt="AUTOSCAN">
       </a>
       <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <ul class="nav navbar-nav d-md-down-none">
+      <ul class="nav navbar-nav ">
         {% if is_granted('ROLE_ENREGISTREMENT') %}
             <li class="nav-item px-3">
               <a class="nav-link {% block menu_enregistrement_actif %}{% endblock %}" href="{{ path('vehicule_index') }}">AIGUILLAGE</a>
@@ -80,7 +80,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            {{app.user.username}} <img class="img-avatar" src="{{ asset('images/6.jpg') }}" alt="email user">
+              <span class="d-md-down-none">{{app.user.username}}</span> <img class="img-avatar" src="{{ asset('images/6.jpg') }}" alt="email user">
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-header text-center">
@@ -95,10 +95,6 @@
           </div>
         </li>
       </ul>
-      
-      <button class="navbar-toggler aside-menu-toggler d-lg-none" type="button" data-toggle="aside-menu-show">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </header>
     <div class="app-body">
       <div class="sidebar">
