Correction dossier import

--- a/app/Resources/views/vehicule/edit.html.twig
+++ b/app/Resources/views/vehicule/edit.html.twig
@@ -43,6 +43,7 @@
             //$("#appbundle_vehicule_carrosserieAjax" ).val("{{- vehicule.typeVehicule.carrosserie.libelle -}}");
             $( "#appbundle_vehicule_dateValidite" ).datepicker({changeMonth: true, changeYear: true, defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
             $( "#appbundle_vehicule_dateImmatriculationPrecedent" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
+            $( "#appbundle_vehicule_dateProchaineVisite" ).datepicker({changeMonth: true, changeYear: true,  defaultDate: "-10Y", dateFormat: 'yy-mm-dd' });
         /*$( "#appbundle_vehicule_ptac" ).change(function() {
             var ptac = $( "#appbundle_vehicule_ptac" ).val();
             if(ptac <= 3,5){
