--- a/app/Resources/views/parametres/menu.html.twig
+++ b/app/Resources/views/parametres/menu.html.twig
@@ -62,10 +62,10 @@
             <a class="nav-link {% block menu_codemaharesultat_actif %}{% endblock %}" href="{{ path('admin_parametres_codemaharesultat_index') }}">
             <i class="nav-icon icon-list"></i> Interprétation des résulltats</a>
         </li>
-        <li class="nav-item {% block menu_vehiculemaha_open %}{% endblock %}">
+        {# <li class="nav-item {% block menu_vehiculemaha_open %}{% endblock %}">
             <a class="nav-link {% block menu_vehiculemaha_actif %}{% endblock %}" href="#">
             <i class="nav-icon icon-list"></i> Codes Véhicules MAHA</a>
-        </li>
+        </li> #}
     </ul>
 </li>
 <li class="nav-item nav-dropdown {% block menu_centre_open %}{% endblock %}">
